adding index to label

--- a/templates/index.html
+++ b/templates/index.html
@@ -24,6 +24,8 @@
  <h2>The classification of the image is {{predictedLabel}}</h2>
  <img src={{filePathName}} alt='imagename'>
  {{filePathName}}
+ <h1>This is for indexing</h1>
+ <h1>{{index}}</h1>
 
 </form>
 <br>
